Modified views for  Patient

--- a/hospital/templates/login.html
+++ b/hospital/templates/login.html
@@ -4,7 +4,7 @@
 {% if error == "no" %}
     <script>
         alert('Logged in successfully');
-        window.location = "{% url 'index' %}";
+        window.location = "{% url 'dashboard' %}";
     </script>
 {% endif %}
 
