--- a/hospital/templates/add_appointment.html
+++ b/hospital/templates/add_appointment.html
@@ -16,22 +16,29 @@
 
 <div class="container">
     <h2 class="text-center">Add Appointment</h2>
-    <form method="post" action="{% url 'add_appoinment' %}" enctype="multipart/form-data">
+    <form method="post">
         {% csrf_token %}
         <!-- Your form fields, including the image field -->
-        <label>Appoint Name</label>
-        <input type="text" class="form-control" name="name">
+        <label>Doctor Name</label>
+        <select name="doctor" class="form-control">
+            {% for i in doctor %}
+            <option value="{{ i.Name}}">{{i.Name}}</option>
+            {% endfor %}
+        </select>
     
-        <label>Mobile</label>
-        <input type="number" class="form-control" name="mobile">
+        <label>Patient Name</label>
+        <select name="patient" class="form-control">
+            {% for i in patient %}
+            <option value="{{ i.name}}">{{i.name}}</option>
+            {% endfor %}
+        </select>
     
-        <label>Gender</label>
-        <input type="text" class="form-control" name="gender">
+        <label>Date</label>
+        <input type="date" class="form-control" name="date">
     
-        <label>Address</label>
-        <input type="text" class="form-control" name="address">
-    
-        <button type="submit">Submit</button>
+        <label>Time</label>
+        <input type="time" class="form-control" name="time">
+        <input type="submit" value="submit" class="form-control btn btn-primary">
     </form>
     
 </div>
