--- a/hospital/templates/add_doctor.html
+++ b/hospital/templates/add_doctor.html
@@ -31,7 +31,7 @@
         <label>Image</label>
         <input type="file" class="form-control" name="image">
     
-        <button type="submit">Submit</button>
+        <input type="submit" value="submit" class="form-control btn btn-primary">
     </form>
     
 </div>
