--- a/hospital/templates/add_patient.html
+++ b/hospital/templates/add_patient.html
@@ -31,8 +31,7 @@
         <label>Address</label>
         <input type="text" class="form-control" name="address">
     
-        <button type="submit">Submit</button>
-    </form>
+        <input type="submit" value="submit" class="form-control btn btn-primary">
     
 </div>
 {% include 'footer.html' %}
