--- a/hospital/templates/index.html
+++ b/hospital/templates/index.html
@@ -1,7 +1,26 @@
 {% include 'base.html' %}
 {% load static %}
 {% include 'navigation.html' %}
+
+
 {% block content %}
-<h1>Admin Dashboard</h1>
+<h1 class="text-center">Admin Dashboard</h1>
+<br><br><br><br>
 {% endblock content %}
+<div class="container">
+    <div class = "row" >
+        <div class="col-sm-4">
+            <h2 style="color: red;">{{d}}</h2>
+            <a href="{% url 'view_doctor' %}"><h4 style="color: blue;">Doctors</h4></a>  
+        </div>
+        <div class="col-sm-4">
+            <h2 style="color: red;">{{d}}</h2>
+            <a href="{% url 'view_patient' %}"><h4 style="color: blue;">Patients</h4></a>
+        </div>
+        <div class="col-sm-4">
+            <h2 style="color: red;">{{d}}</h2>
+            <a href="{% url 'view_appointment' %}"><h4 style="color: blue;">Appointments</h4></a>
+        </div>
+    </div>
+</div>
 {% include 'footer.html' %}
