--- a/hospital/templates/view_appointment.html
+++ b/hospital/templates/view_appointment.html
@@ -18,10 +18,10 @@
             {% for i in doc %}
             <tr>
                 <td>{{ i.id }}</td>
-                <td>{{ i.name }}</td>
-                <td>{{ i.gender }}</td>
-                <td>{{ i.mobile }}</td>
-                <td>{{ i.address }}</td>
+                <td>{{ i.doctor}}</td>
+                <td>{{ i.patient}}</td>
+                <td>{{ i.date }}</td>
+                <td>{{ i.time }}</td>
                 <td>
                     <a href="{% url 'delete_appointment' i.id %}" onclick="return confirm('Are you sure you want to delete?')" class="btn btn-danger">Delete</a>
                 </td>
